--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="menu-button">
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars">button</i>
             </div>
          </div>
     </nav>
