--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="menu-button">
-                <i class="fas fa-bars">options</i>
+                <i class="fas fa-bars"></i>
 
             </div>
          </div>
