--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width-device-width, initial-scale-1,0">
+<meta name="viewport" content="width=device-width, initial-scale-1,0">
 <title>Personal portfolio website</title>
 <link rel="stylesheet" href="Portfolio.css">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
