--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale-1,0">
 <title>Personal portfolio website</title>
-<link rel="stylesheet" href="Portfolio.css">
+<link rel="stylesheet" href="index.css">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
@@ -42,7 +42,7 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad vero alias, accusamus facere fuga possimus. Iusto, fugit, cupiditate accusamus quibusdam at praesentium temporibus cumque numquam quae pariatur quam beatae 
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ut voluptas esse sed adipisci, corporis ipsum, culpa, ipsam quo odio voluptatum similique qui asperiores eveniet. Blanditiis labore voluptatibus quos sapiente id inventore quo animi magni, totam quibusdam reiciendis debitis neque?</p>
 
-   <script src="Portfolio.js"></script>
+   <script src="index.js"></script>
 
 </body>
 </html>
