fixed team error

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
@@ -11,15 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
-=======
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale-1,0">
-<title>Personal portfolio website</title>
-<link rel="stylesheet" href="index.css">
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
->>>>>>> 0aeba1f2b8841c52b5a6472c123f08c10057a850
+<title> personal portfolio website
+</title>
 </head>
 <body>
 
@@ -126,6 +119,7 @@ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi q
         <div class="max-width">
             <h2 class="title">
 My skills</h2>
+        
 <div class="skills-content">
                 <div class="column left">
                     <div class="text">
@@ -161,8 +155,8 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione er
 </div>
 </section>
 
-    <!-- teams section start -->
-    <section class="teams" id="teams">
+ <!-- teams section start -->
+<section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">
 My teams</h2>
@@ -171,7 +165,25 @@ My teams</h2>
                     <div class="box">
                         <img src="#" alt="">
                         <div class="text">
-Uttam</div>
+Alpesh</div>
+<p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+</div>
+</div>
+<div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+uttam</div>
+<p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+</div>
+</div>
+<div class="card">
+                    <div class="box">
+                        <img src="#" alt="">
+                        <div class="text">
+                            Sanirah</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
@@ -189,25 +201,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <div class="box">
                         <img src="#" alt="">
                         <div class="text">
-sanirah</div>
-<p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-<div class="card">
-                    <div class="box">
-                        <img src="#" alt="">
-                        <div class="text">
-swapnil</div>
-<p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-</div>
-</div>
-<div class="card">
-                    <div class="box">
-                        <img src="#" alt="">
-                        <div class="text">
-anant</div>
+Swapnil</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
@@ -289,23 +283,10 @@ Message me</div>
     <footer>
         <span>Created By Alpesh <a href="#">Alpesh_7283</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    
 <script src="index.js"></script>
-=======
-     <div class="max-width">
-         <div class="home-content">
-           <div class="text-1">Hello, my name is</div>
-           <div class="text-2">Alpesh Bansode</div>
-           <div class="text-3">And I'm a <span>Gamer</span></div>
-         </div>
-     </div>
-    </section>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad vero alias, accusamus facere fuga possimus. Iusto, fugit, cupiditate accusamus quibusdam at praesentium temporibus cumque numquam quae pariatur quam beatae 
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ut voluptas esse sed adipisci, corporis ipsum, culpa, ipsam quo odio voluptatum similique qui asperiores eveniet. Blanditiis labore voluptatibus quos sapiente id inventore quo animi magni, totam quibusdam reiciendis debitis neque?</p>
-
-   <script src="index.js"></script>
-
+  
 
 </body>
 </html>
