--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ And I'm a <span class="typing"></span></div>
 About me</h2>
 <div class="about-content">
                 <div class="column left">
-                    <img src="me.jpg" alt="" height="auto" width="auto">
+                    <img src="me.jpg" alt="" height="250" width="250">
                 </div>
 <div class="column right">
                     <div class="text">
