tried some functions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 <title> personal portfolio website
 </title>
 </head>
@@ -46,12 +47,12 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">
-Hello, my name is</div>
-<div class="text-2">
-Alpesh bansode</div>
-<div class="text-3">
-And I'm a <span class="typing"></span></div>
-<a href="#">Hire me</a>
+             Hello, my name is</div>
+             <div class="text-2">
+              Alpesh bansode</div>
+             <div class="text-3">
+               And I'm a <span class="typing"></span></div>
+               <a href="#contact" class="menu-btn">Hire me</a>
             </div>
 </div>
 </section>
@@ -70,7 +71,8 @@ About me</h2>
 I'm Alpesh and I'm a <span class="typing-2"></span></div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-<a href="#">Download CV</a>
+<a href="" id="downlink"  download="">
+     Download CV</a>
                 </div>
 </div>
 </div>
@@ -126,7 +128,7 @@ My skills</h2>
 My creative skills & experiences.</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-<a href="#">Read more</a>
+<a href=" https://alpesh16.github.io/personal-portfolio/">Read more</a>
                </div>
                 
 <div class="column right">
@@ -182,9 +184,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 <div class="card">
                     <div class="box">
-                        <img src="IMG-20201216-WA0004.jpg" alt="">
+                        <img src="IMG_20201031_155019.jpg" alt="">
                         <div class="text">
-                            Sanirah</div>
+                            Shiv</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
@@ -200,9 +202,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 <div class="card">
                     <div class="box">
-                        <img src="#" alt="">
+                        <img src="IMG-20201216-WA0004.jpg" alt="">
                         <div class="text">
-Swapnil</div>
+Sanirah</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
