--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi q
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">
-Advertising</div>
+WP website</div>
 <p>
 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
 </div>
@@ -106,7 +106,7 @@ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi q
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">
-Apps Design</div>
+Coded website</div>
 <p>
 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
 </div>
@@ -162,49 +162,49 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione er
 <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">
-My Friends</h2>
+My Projects</h2>
 <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="me.jpg" alt="">
+                        <img src="#" alt="">
                         <div class="text">
-Alpesh</div>
+E-com</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 </div>
 <div class="card">
                     <div class="box">
-                        <img src="IMG_20201216_182351.jpg" alt="">
+                        <img src="#" alt="">
                         <div class="text">
-uttam</div>
+Retail shop</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 </div>
 <div class="card">
                     <div class="box">
-                        <img src="IMG_20201031_155019.jpg" alt="">
+                        <img src="#" alt="">
                         <div class="text">
-                            Shiv</div>
+                            Blog</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 </div>
 <div class="card">
                     <div class="box">
-                        <img src="IMG_20201216_182410.jpg" alt="">
+                        <img src="#" alt="">
                         <div class="text">
-Sudhir</div>
+Hospital</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 </div>
 <div class="card">
                     <div class="box">
-                        <img src="IMG-20201216-WA0004.jpg" alt="">
+                        <img src="#" alt="">
                         <div class="text">
-Sanirah</div>
+Gym</div>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
